[gd_scene load_steps=44 format=2]

[ext_resource path="res://assets/Textures_v2/CHAR_INFO/icon_charinfo_details.png" type="Texture" id=1]
[ext_resource path="res://assets/images/portraits/cali_collar_prt.png" type="Texture" id=2]
[ext_resource path="res://assets/Textures_v2/Universal/Buttons/button_exp_pressed.png" type="Texture" id=3]
[ext_resource path="res://assets/Textures_v2/Universal/Bars/bar_big.png" type="Texture" id=4]
[ext_resource path="res://assets/Textures_v2/CHAR_INFO/icon_charinfo_siblings.png" type="Texture" id=5]
[ext_resource path="res://assets/Textures_v2/Universal/Bars/bar_big_hp.png" type="Texture" id=6]
[ext_resource path="res://assets/Textures_v2/Universal/Buttons/button_exp.png" type="Texture" id=7]
[ext_resource path="res://assets/images/gui/gui icons/icon_wits.png" type="Texture" id=8]
[ext_resource path="res://assets/Textures_v2/Universal/Bars/bar_big_mp.png" type="Texture" id=9]
[ext_resource path="res://assets/Textures_v2/Universal/Bars/bar_big_lust.png" type="Texture" id=10]
[ext_resource path="res://assets/Textures_v2/CHAR_INFO/icon_charinfo_skills.png" type="Texture" id=11]
[ext_resource path="res://assets/Textures_v2/CHAR_INFO/button_charinfo_sqr.png" type="Texture" id=12]
[ext_resource path="res://assets/images/gui/gui icons/icon_physics.png" type="Texture" id=13]
[ext_resource path="res://assets/images/gui/gui icons/icon_charm.png" type="Texture" id=14]
[ext_resource path="res://assets/images/gui/gui icons/icon_sex.png" type="Texture" id=15]
[ext_resource path="res://assets/Textures_v2/Universal/Buttons/button_exp_hover.png" type="Texture" id=16]
[ext_resource path="res://src/scenes/RightClickReactButton.gd" type="Script" id=17]
[ext_resource path="res://assets/images/gui/gui icons/timid_factor.png" type="Texture" id=18]
[ext_resource path="res://assets/images/gui/gui icons/charm.png" type="Texture" id=19]
[ext_resource path="res://assets/images/gui/gui icons/wit.png" type="Texture" id=20]
[ext_resource path="res://assets/images/gui/gui icons/tame_factor.png" type="Texture" id=21]
[ext_resource path="res://assets/images/gui/gui icons/sex.png" type="Texture" id=22]
[ext_resource path="res://assets/images/gui/gui icons/growth_factor.png" type="Texture" id=23]
[ext_resource path="res://assets/images/sexicons/futa.png" type="Texture" id=24]
[ext_resource path="res://assets/images/gui/gui icons/physics_factor.png" type="Texture" id=25]
[ext_resource path="res://assets/Fonts_v2/FontThemes/MainSmallBold.tres" type="DynamicFont" id=26]
[ext_resource path="res://assets/images/gui/gui icons/magic_factor.png" type="Texture" id=27]
[ext_resource path="res://assets/Textures_v2/CHAR_INFO old/Buttons/buttonskill_prof.png" type="Texture" id=28]
[ext_resource path="res://assets/Textures_v2/CHAR_INFO old/Panels/decorative_name.png" type="Texture" id=29]
[ext_resource path="res://assets/Textures_v2/MANSION/Skills/Buttons/buttonskill_empty.png" type="Texture" id=30]
[ext_resource path="res://assets/Fonts_v2/FontThemes/TitlesBig.tres" type="DynamicFont" id=31]
[ext_resource path="res://gui_modules/CharacterInfo/SlaveSummaryModule.gd" type="Script" id=32]
[ext_resource path="res://assets/Themes_v2/CHAR_INFO/CHI_Slave_Summary_Panel.tres" type="StyleBox" id=33]
[ext_resource path="res://assets/Themes_v2/CHAR_INFO/CHI_Professions_Panel.tres" type="StyleBox" id=34]
[ext_resource path="res://assets/Fonts_v2/FontThemes/MainMiddle.tres" type="DynamicFont" id=35]
[ext_resource path="res://assets/Textures_v2/CHAR_INFO old/Buttons/arrow_charswap.png" type="Texture" id=36]
[ext_resource path="res://assets/Textures_v2/CHAR_INFO old/Buttons/arrow_charswap_hover.png" type="Texture" id=37]
[ext_resource path="res://assets/Textures_v2/CHAR_INFO old/Buttons/arrow_charswap_pressed.png" type="Texture" id=38]
[ext_resource path="res://assets/Textures_v2/CHAR_INFO/icon_charinfo_gear.png" type="Texture" id=39]
[ext_resource path="res://assets/Textures_v2/CHAR_INFO/button_charinfo_sqr_pressed.png" type="Texture" id=40]
[ext_resource path="res://assets/Textures_v2/CHAR_INFO/button_charinfo_sqr_hover.png" type="Texture" id=41]
[ext_resource path="res://assets/images/iconsraces/human.png" type="Texture" id=42]
[ext_resource path="res://assets/images/iconsages/T.png" type="Texture" id=43]

[node name="SlaveSummaryModule" type="Panel"]
light_mask = 0
rect_min_size = Vector2( 220, 1050 )
custom_styles/panel = ExtResource( 33 )
script = ExtResource( 32 )

[node name="Portrait" type="TextureRect" parent="."]
light_mask = 0
margin_left = 11.0
margin_top = 11.0
margin_right = 208.0
margin_bottom = 206.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="race" type="TextureRect" parent="."]
margin_left = 14.4541
margin_top = 15.9214
margin_right = 54.454
margin_bottom = 55.9214
texture = ExtResource( 42 )
expand = true
stretch_mode = 6

[node name="sex" type="TextureRect" parent="."]
margin_left = 14.2384
margin_top = 65.3627
margin_right = 54.2384
margin_bottom = 105.363
texture = ExtResource( 24 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="age" type="TextureRect" parent="."]
margin_left = 15.4827
margin_top = 115.874
margin_right = 55.4827
margin_bottom = 155.874
texture = ExtResource( 43 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="base_stats" type="VBoxContainer" parent="." groups=["hide_stranger"]]
light_mask = 0
margin_left = 30.0
margin_top = 232.0
margin_right = 190.0
margin_bottom = 333.0
custom_constants/separation = 13

[node name="hp" type="TextureProgress" parent="base_stats"]
light_mask = 0
margin_right = 160.0
margin_bottom = 19.0
rect_min_size = Vector2( 160, 19 )
value = 100.0
texture_progress = ExtResource( 6 )
nine_patch_stretch = true

[node name="Label" type="Label" parent="base_stats/hp"]
light_mask = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = -14.5
margin_right = 80.0
margin_bottom = 14.5
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 26 )
text = "1.100"
align = 1

[node name="TextureRect" type="TextureRect" parent="base_stats/hp"]
margin_left = -20.0
margin_top = -2.0
margin_right = 180.0
margin_bottom = 22.0
texture = ExtResource( 4 )
expand = true

[node name="mp" type="TextureProgress" parent="base_stats"]
light_mask = 0
margin_top = 32.0
margin_right = 160.0
margin_bottom = 51.0
rect_min_size = Vector2( 160, 19 )
value = 50.0
texture_progress = ExtResource( 9 )
nine_patch_stretch = true

[node name="Label" type="Label" parent="base_stats/mp"]
light_mask = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = -14.5
margin_right = 80.0
margin_bottom = 14.5
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 26 )
text = "1.100"
align = 1

[node name="TextureRect" type="TextureRect" parent="base_stats/mp"]
margin_left = -20.0
margin_top = -2.0
margin_right = 180.0
margin_bottom = 22.0
texture = ExtResource( 4 )
expand = true

[node name="lust" type="TextureProgress" parent="base_stats"]
light_mask = 0
margin_top = 64.0
margin_right = 160.0
margin_bottom = 83.0
rect_min_size = Vector2( 160, 19 )
value = 50.0
texture_progress = ExtResource( 10 )
nine_patch_stretch = true

[node name="Label" type="Label" parent="base_stats/lust"]
light_mask = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = -14.5
margin_right = 80.0
margin_bottom = 14.5
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 26 )
text = "1.100"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="base_stats/lust"]
margin_left = -20.0
margin_top = -2.0
margin_right = 180.0
margin_bottom = 22.0
texture = ExtResource( 4 )
expand = true

[node name="factors" type="VBoxContainer" parent="."]
light_mask = 0
margin_left = 31.0
margin_top = 555.0
margin_right = 152.0
margin_bottom = 835.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/separation = 0

[node name="growth_factor" type="TextureRect" parent="factors" groups=["hide_master"]]
light_mask = 0
margin_right = 50.0
margin_bottom = 35.0
rect_min_size = Vector2( 50, 35 )
mouse_filter = 0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 23 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="factors/growth_factor"]
light_mask = 0
margin_left = 69.0
margin_top = -2.0
margin_right = 180.0
margin_bottom = 33.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 35 )
text = "25"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="physics_factor" type="TextureRect" parent="factors"]
light_mask = 0
margin_top = 35.0
margin_right = 50.0
margin_bottom = 70.0
rect_min_size = Vector2( 50, 35 )
mouse_filter = 0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 25 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="factors/physics_factor"]
light_mask = 0
margin_left = 69.2385
margin_top = -2.0
margin_right = 180.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 35 )
text = "25"
clip_text = true

[node name="magic_factor" type="TextureRect" parent="factors"]
light_mask = 0
margin_top = 70.0
margin_right = 50.0
margin_bottom = 105.0
rect_min_size = Vector2( 50, 35 )
mouse_filter = 0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 27 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="factors/magic_factor"]
light_mask = 0
margin_left = 69.2385
margin_top = -2.0
margin_right = 180.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 35 )
text = "25"
clip_text = true

[node name="wits_factor" type="TextureRect" parent="factors"]
light_mask = 0
margin_top = 105.0
margin_right = 50.0
margin_bottom = 140.0
rect_min_size = Vector2( 50, 35 )
mouse_filter = 0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 20 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="factors/wits_factor"]
light_mask = 0
margin_left = 69.2385
margin_top = -2.0
margin_right = 180.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 35 )
text = "25"
clip_text = true

[node name="charm_factor" type="TextureRect" parent="factors"]
light_mask = 0
margin_top = 140.0
margin_right = 50.0
margin_bottom = 175.0
rect_min_size = Vector2( 50, 35 )
mouse_filter = 0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 19 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="factors/charm_factor"]
light_mask = 0
margin_left = 69.2385
margin_top = -2.0
margin_right = 180.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 35 )
text = "25"
clip_text = true

[node name="sexuals_factor" type="TextureRect" parent="factors"]
light_mask = 0
margin_top = 175.0
margin_right = 50.0
margin_bottom = 210.0
rect_min_size = Vector2( 50, 35 )
mouse_filter = 0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 22 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="factors/sexuals_factor"]
light_mask = 0
margin_left = 69.2385
margin_top = -2.0
margin_right = 180.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 35 )
text = "25"
clip_text = true

[node name="tame_factor" type="TextureRect" parent="factors" groups=["hide_master"]]
light_mask = 0
margin_top = 210.0
margin_right = 50.0
margin_bottom = 245.0
rect_min_size = Vector2( 50, 35 )
mouse_filter = 0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 21 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="factors/tame_factor"]
light_mask = 0
margin_left = 69.2385
margin_top = -2.0
margin_right = 180.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 35 )
text = "25"
clip_text = true

[node name="authority_factor" type="TextureRect" parent="factors" groups=["hide_master"]]
light_mask = 0
margin_top = 245.0
margin_right = 50.0
margin_bottom = 280.0
rect_min_size = Vector2( 50, 35 )
mouse_filter = 0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 18 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="factors/authority_factor"]
light_mask = 0
margin_left = 69.2385
margin_top = -2.0
margin_right = 180.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 35 )
text = "25"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="Control" parent="."]
light_mask = 0
margin_left = 8.0
margin_top = 352.0
margin_right = 213.0
margin_bottom = 519.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="Control" parent="VBoxContainer2"]
light_mask = 0
margin_bottom = 167.0
mouse_filter = 2

[node name="Exp" type="TextureButton" parent="VBoxContainer2/TextureRect2"]
light_mask = 0
margin_left = -2.0
margin_top = -2.0
margin_right = 50.0
margin_bottom = 30.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 16 )

[node name="Label" type="Label" parent="VBoxContainer2/TextureRect2/Exp"]
light_mask = 0
margin_right = 52.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 35 )
text = "EXP"
align = 1
valign = 1

[node name="physics" type="TextureRect" parent="VBoxContainer2/TextureRect2"]
light_mask = 0
margin_left = 13.0
margin_top = 44.0
margin_right = 42.0
margin_bottom = 69.0
mouse_filter = 0
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="wits" type="TextureRect" parent="VBoxContainer2/TextureRect2"]
light_mask = 0
margin_left = 13.0
margin_top = 80.0
margin_right = 41.0
margin_bottom = 105.0
mouse_filter = 0
texture = ExtResource( 8 )

[node name="charm" type="TextureRect" parent="VBoxContainer2/TextureRect2"]
light_mask = 0
margin_left = 13.0
margin_top = 111.0
margin_right = 41.0
margin_bottom = 136.0
mouse_filter = 0
texture = ExtResource( 14 )

[node name="sexuals" type="TextureRect" parent="VBoxContainer2/TextureRect2"]
light_mask = 0
margin_left = 13.0
margin_top = 147.0
margin_right = 41.0
margin_bottom = 172.0
mouse_filter = 0
texture = ExtResource( 15 )

[node name="TextureRect3" type="Control" parent="VBoxContainer2"]
light_mask = 0
margin_left = 56.0
margin_right = 106.0
margin_bottom = 167.0
rect_min_size = Vector2( 50, 0 )
mouse_filter = 2

[node name="BaseExp" type="Label" parent="VBoxContainer2/TextureRect3"]
light_mask = 0
margin_left = 6.0
margin_top = -5.0
margin_right = 56.0
margin_bottom = 30.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 35 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="physics" type="Label" parent="VBoxContainer2/TextureRect3"]
light_mask = 0
margin_left = -6.0
margin_top = 36.0
margin_right = 72.0
margin_bottom = 71.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 35 )
text = "Physics"
align = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="wits" type="Label" parent="VBoxContainer2/TextureRect3"]
light_mask = 0
margin_left = -6.0
margin_top = 72.0
margin_right = 72.0
margin_bottom = 107.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 35 )
text = "Wits"
align = 1
clip_text = true

[node name="charm" type="Label" parent="VBoxContainer2/TextureRect3"]
light_mask = 0
margin_left = -6.0
margin_top = 103.0
margin_right = 72.0
margin_bottom = 138.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 35 )
text = "Charm"
align = 1
clip_text = true

[node name="sexuals" type="Label" parent="VBoxContainer2/TextureRect3"]
light_mask = 0
margin_left = -6.0
margin_top = 139.0
margin_right = 72.0
margin_bottom = 174.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 35 )
text = "Sexuals"
align = 1
clip_text = true

[node name="TextureRect4" type="Control" parent="VBoxContainer2"]
light_mask = 0
margin_left = 128.0
margin_right = 178.0
margin_bottom = 167.0
rect_min_size = Vector2( 50, 0 )

[node name="NextClassExp" type="Label" parent="VBoxContainer2/TextureRect4"]
light_mask = 0
margin_top = -5.0
margin_right = 50.0
margin_bottom = 30.0
mouse_filter = 0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 35 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="physics2" type="Label" parent="VBoxContainer2/TextureRect4"]
light_mask = 0
margin_top = 36.0
margin_right = 50.0
margin_bottom = 71.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 35 )
text = "Physics"
align = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="wits2" type="Label" parent="VBoxContainer2/TextureRect4"]
light_mask = 0
margin_top = 72.0
margin_right = 50.0
margin_bottom = 107.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 35 )
text = "Wits"
align = 1
clip_text = true

[node name="charm2" type="Label" parent="VBoxContainer2/TextureRect4"]
light_mask = 0
margin_top = 103.0
margin_right = 50.0
margin_bottom = 138.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 35 )
text = "Charm"
align = 1
clip_text = true

[node name="sexuals2" type="Label" parent="VBoxContainer2/TextureRect4"]
light_mask = 0
margin_top = 139.0
margin_right = 50.0
margin_bottom = 174.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 35 )
text = "Sexuals"
align = 1
clip_text = true

[node name="ProfessionsBG" type="Panel" parent="."]
light_mask = 0
margin_left = 220.0
margin_right = 1190.0
margin_bottom = 130.0
custom_styles/panel = ExtResource( 34 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="professions" type="GridContainer" parent="."]
visible = false
light_mask = 0
margin_left = 236.0
margin_top = 14.0
margin_right = 1176.0
margin_bottom = 114.0
grow_horizontal = 0
mouse_filter = 2
custom_constants/hseparation = 19
columns = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="TextureButton" parent="professions"]
visible = false
light_mask = 0
margin_right = 100.0
margin_bottom = 100.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 100, 100 )
texture_normal = ExtResource( 28 )
texture_pressed = ExtResource( 28 )
texture_hover = ExtResource( 28 )
texture_disabled = ExtResource( 28 )
texture_focused = ExtResource( 28 )
expand = true
stretch_mode = 6
script = ExtResource( 17 )

[node name="TextureRect" type="TextureRect" parent="professions/Button"]
light_mask = 0
margin_left = 7.0
margin_top = 7.0
margin_right = 93.0
margin_bottom = 93.0
texture = ExtResource( 30 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="professions/Button"]
visible = false
light_mask = 0
margin_left = 7.0
margin_top = 69.0
margin_right = 93.0
margin_bottom = 93.0
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="."]
margin_left = 18.0
margin_top = 856.216
margin_right = 202.0
margin_bottom = 1044.22
custom_constants/vseparation = 20
custom_constants/hseparation = 20
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SkillsButton" type="TextureButton" parent="GridContainer"]
margin_right = 82.0
margin_bottom = 82.0
toggle_mode = true
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 40 )
texture_hover = ExtResource( 41 )

[node name="TextureRect" type="TextureRect" parent="GridContainer/SkillsButton"]
anchor_top = 0.0108643
anchor_right = 0.512195
anchor_bottom = 0.523059
margin_top = -1.52081
margin_right = 40.0
margin_bottom = 38.4792
texture = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SiblingsButton" type="TextureButton" parent="GridContainer"]
margin_left = 102.0
margin_right = 184.0
margin_bottom = 82.0
toggle_mode = true
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 40 )
texture_hover = ExtResource( 41 )

[node name="TextureRect" type="TextureRect" parent="GridContainer/SiblingsButton"]
margin_left = -1.0
margin_top = -0.629944
margin_right = 81.0
margin_bottom = 81.3701
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GearButton" type="TextureButton" parent="GridContainer"]
margin_top = 102.0
margin_right = 82.0
margin_bottom = 184.0
toggle_mode = true
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 40 )
texture_hover = ExtResource( 41 )

[node name="TextureRect" type="TextureRect" parent="GridContainer/GearButton"]
margin_left = 1.0
margin_right = 83.0
margin_bottom = 82.0
texture = ExtResource( 39 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DetailsButton" type="TextureButton" parent="GridContainer"]
margin_left = 102.0
margin_top = 102.0
margin_right = 184.0
margin_bottom = 184.0
toggle_mode = true
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 40 )
texture_hover = ExtResource( 41 )

[node name="TextureRect" type="TextureRect" parent="GridContainer/DetailsButton"]
anchor_top = -0.005
margin_left = 1.0
margin_top = -0.0104712
margin_right = 83.0
margin_bottom = 81.5795
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="HBoxContainer" parent="."]
light_mask = 0
margin_left = 556.82
margin_top = 6.0
margin_right = 843.82
margin_bottom = 131.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 15
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Name"]
visible = false
light_mask = 0
margin_left = 7.0
margin_right = 71.0
margin_bottom = 125.0
texture = ExtResource( 29 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name" type="Label" parent="Name"]
light_mask = 0
margin_left = 84.0
margin_top = 31.0
margin_right = 203.0
margin_bottom = 93.0
grow_horizontal = 0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 31 )
text = "Name"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="Name"]
visible = false
light_mask = 0
margin_left = 191.0
margin_right = 255.0
margin_bottom = 125.0
texture = ExtResource( 29 )
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChangeSlaveButtons" type="Control" parent="."]
margin_left = 851.32
margin_top = 6.0
margin_right = 851.32
margin_bottom = 131.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="TextureButton" parent="ChangeSlaveButtons"]
margin_left = -623.7
margin_top = 15.0
margin_right = -553.7
margin_bottom = 107.0
texture_normal = ExtResource( 36 )
texture_pressed = ExtResource( 38 )
texture_hover = ExtResource( 37 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Right" type="TextureButton" parent="ChangeSlaveButtons"]
margin_left = 330.68
margin_top = 15.0
margin_right = 400.68
margin_bottom = 107.0
rect_scale = Vector2( -1, 1 )
texture_normal = ExtResource( 36 )
texture_pressed = ExtResource( 38 )
texture_hover = ExtResource( 37 )
